envoy-proxy.yaml
#admin:
#  access_log_path: /tmp/admin_access.log
#  address:
#    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: service-grpc-chat-listeners
      address:
        socket_address: { address: 0.0.0.0, port_value: 51051 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              config:
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2: {}
                              regex: \*
                        allow_methods: GET, PUT, DELETE, POST
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message,origin
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: grpc-backend-services, timeout: { seconds: 60 } }
                http_filters:
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.router

  clusters:
    - name: grpc-backend-services
      connect_timeout: 1.25s
      type: logical_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      hosts: [{ socket_address: { address: grpc_chat_backend, port_value: 50051 }}]
